alignment bugs

--- a/src-web/components/Topology/scss/diagram-filter-bar.scss
+++ b/src-web/components/Topology/scss/diagram-filter-bar.scss
@@ -11,6 +11,7 @@
 .filter-bar {
     display: flex;
     flex-direction: row;
+    padding: 4px 0 2px;
 
     .filter-bar-button-container {
       margin: 0 4px;
